--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,10 @@ section, summary, time, mark, audio, video {
   font: inherit;
   vertical-align: baseline; }
 
+  html{
+    font-size: 62.5%;
+  }
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
@@ -92,20 +96,25 @@ body {
 
 /* Type */
 body, input, select, textarea {
-  color: #7f888f;
+
+  color:black;
   font-family: "Open Sans", sans-serif;
   font-size: 13pt;
   font-weight: 400;
   line-height: 1.65; }
   @media screen and (max-width: 1680px) {
     body, input, select, textarea {
-      font-size: 11pt; } }
+      font-size: 11pt;
+      font-size: 1.5rem;
+     } }
   @media screen and (max-width: 1280px) {
     body, input, select, textarea {
-      font-size: 10pt; } }
+      font-size: 10pt;
+    font-size: 1.5rem; } }
   @media screen and (max-width: 360px) {
     body, input, select, textarea {
-      font-size: 9pt; } }
+      font-size: 9pt;
+    font-size: 1.5rem; } }
 
 a {
   -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
