--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,16 +105,18 @@ body, input, select, textarea {
   @media screen and (max-width: 1680px) {
     body, input, select, textarea {
       font-size: 11pt;
-      font-size: 1.5rem;
+      font-size: 1.55rem;
+     ;
      } }
   @media screen and (max-width: 1280px) {
     body, input, select, textarea {
       font-size: 10pt;
-    font-size: 1.5rem; } }
+    font-size: 1.55rem; } }
   @media screen and (max-width: 360px) {
     body, input, select, textarea {
       font-size: 9pt;
-    font-size: 1.5rem; } }
+    font-size: 1.55rem; 
+  } }
 
 a {
   -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
@@ -122,11 +124,13 @@ a {
   -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   border-bottom: dotted 1px;
-  color: #f56a6a;
+  color:#256EFF;
   text-decoration: none; }
   a:hover {
-    border-bottom-color: #f56a6a;
-    color: #f56a6a !important; }
+    
+    border-bottom-color: #EFA8B8;
+    color:#256EFF;
+   }
     a:hover strong {
       color: inherit; }
 
@@ -181,10 +185,17 @@ h5 {
 h6 {
   font-size: 0.7em; }
 
+  /* contact form */
   form p{
     font-size: 2rem;
     font-weight: bold;
   }
+
+  form button{
+    margin-top:2rem;
+  }
+
+
 @media screen and (max-width: 1680px) {
   h1 {
     font-size: 3.5em; } }
@@ -1024,7 +1035,8 @@ header p {
   text-transform: uppercase; }
 
 header.major > :last-child {
-  border-bottom: solid 3px #f56a6a;
+ 
+  border-bottom: solid 3px  #256EFF;
   display: inline-block;
   margin: 0 0 2em 0;
   padding: 0 0.75em 0.5em 0; }
@@ -1082,8 +1094,10 @@ textarea {
   input[type="url"]:focus,
   select:focus,
   textarea:focus {
-    border-color: #f56a6a;
-    box-shadow: 0 0 0 1px #f56a6a; }
+   
+    border-color:  #256EFF;
+    
+  box-shadow:  0 0 0 1px  #256EFF; }
 
 select {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(210, 215, 217, 0.75)' /%3E%3C/svg%3E");
@@ -1171,8 +1185,10 @@ input[type="radio"] {
     content: '\f00c'; }
   input[type="checkbox"]:focus + label:before,
   input[type="radio"]:focus + label:before {
-    border-color: #f56a6a;
-    box-shadow: 0 0 0 1px #f56a6a; }
+   
+    border-color:  #256EFF;
+   
+  box-shadow: 0 0 0 1px  #256EFF; }
 
 input[type="checkbox"] + label:before {
   border-radius: 0.375em; }
@@ -1378,7 +1394,7 @@ ul.icons {
     ul.icons li .icon {
       color: inherit; }
       ul.icons li .icon:before {
-        font-size: 1.25em; }
+        font-size: 2.5rem; }
 
 /* Contact */
 ul.contact {
@@ -1402,7 +1418,8 @@ ul.contact {
       font-family: 'Font Awesome 5 Free';
       font-weight: 400; }
     ul.contact li:before {
-      color: #f56a6a;
+    
+      color: #256EFF;
       display: inline-block;
       font-size: 1.5em;
       height: 1.125em;
@@ -1447,10 +1464,12 @@ ul.pagination {
       padding: 0 0.5em;
       text-align: center; }
       ul.pagination li > .page.active {
-        background-color: #f56a6a;
+        
+        background-color:  #256EFF;
         color: #ffffff !important; }
         ul.pagination li > .page.active:hover {
-          background-color: #f67878; }
+          background-color: #f67878;
+        background-color: #EFA8B8; }
         ul.pagination li > .page.active:active {
           background-color: #f45c5c; }
     ul.pagination li:first-child {
@@ -1521,8 +1540,9 @@ button,
   background-color: transparent;
   border-radius: 0.375em;
   border: 0;
-  box-shadow: inset 0 0 0 2px #f56a6a;
-  color: #f56a6a !important;
+ 
+  box-shadow: inset 0 0 0 2px  #256EFF;
+  /* color: #f56a6a !important; */
   cursor: pointer;
   display: inline-block;
   font-family: "Roboto Slab", serif;
@@ -1579,7 +1599,8 @@ button,
   input[type="button"].primary,
   button.primary,
   .button.primary {
-    background-color: #f56a6a;
+    
+    background-color:  #256EFF;
     box-shadow: none;
     color: #ffffff !important; }
     input[type="submit"].primary:hover,
@@ -1587,7 +1608,8 @@ button,
     input[type="button"].primary:hover,
     button.primary:hover,
     .button.primary:hover {
-      background-color: #f67878; }
+      background-color: #f67878;
+    background-color: #EFA8B8; }
     input[type="submit"].primary:active,
     input[type="reset"].primary:active,
     input[type="button"].primary:active,
@@ -2016,6 +2038,7 @@ button,
     #sidebar .toggle:before {
       content: '\f0c9';
       font-size: 2rem;
+      ;
       height: inherit;
       left: 0;
       line-height: inherit;
@@ -2042,7 +2065,8 @@ button,
         text-indent: 5em;
         width: 5em; }
         #sidebar .toggle:before {
-          font-size: 1.5rem; }
+          
+        font-size: 3rem; }
       #sidebar.inactive {
         margin-left: -24em; } }
   @media screen and (max-width: 1280px) {
@@ -2073,6 +2097,7 @@ button,
         width: 6em; }
         #sidebar .toggle:before {
           font-size: 1.5rem;
+          font-size: 3rem;
           margin-left: -0.4375em; }
       body.is-preload #sidebar {
         display: none; } }
@@ -2102,7 +2127,8 @@ button,
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  border-bottom: solid 5px #f56a6a;
+ 
+  border-bottom: solid 5px  #256EFF;
   padding: 6em 0 1em 0;
   position: relative; }
   #header > * {
@@ -2238,10 +2264,13 @@ button,
     color: inherit;
     cursor: pointer;
     display: block;
-    font-size: 0.9em;
+    font-size: 1.4rem;
+    font-weight: bold;
     padding: 0.625em 0; }
     #menu ul a:hover, #menu ul span:hover {
-      color: #f56a6a; }
+    
+    color: #256EFF;
+  color:#EFA8B8 }
     #menu ul a.opener, #menu ul span.opener {
       -moz-transition: color 0.2s ease-in-out;
       -webkit-transition: color 0.2s ease-in-out;
@@ -2271,7 +2300,9 @@ button,
         position: absolute;
         right: 0; }
       #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
-        color: #f56a6a; }
+      
+      color: #256EFF;
+    color:#EFA8B8;}
       #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
         display: block; }
       #menu ul a.opener.active:before, #menu ul span.opener.active:before {
